force-app/main/default/objects/Product2/fields/Dimensions_LWH__c.field-meta.xml
<CustomField>
    <fullName>Dimensions_LWH__c</fullName>
    <description>Dimensiones físicas del producto (Largo x Ancho x Alto) utilizadas por la API para determinar el tamaño de caja óptimo.</description>
    <inlineHelpText>Introduce el tamaño del producto en centímetros siguiendo el formato: Largo x Ancho x Alto (ej. 30x20x15).</inlineHelpText>
    <label>Dimensions (LWH)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>