force-app/main/default/objects/Product2/fields/Is_Fragile__c.field-meta.xml
<CustomField>
    <fullName>Is_Fragile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag para identificar productos delicados que requieren embalaje especial o suplementos de transporte.</description>
    <inlineHelpText>Marca esta casilla si el producto es frágil y requiere un trato especial en el almacén y el transporte.</inlineHelpText>
    <label>Is Fragile</label>
    <type>Checkbox</type>
</CustomField>