force-app/main/default/objects/Product2/fields/Weight_kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_kg__c</fullName>
    <description>Peso neto del producto expresado en kilogramos. Parámetro obligatorio exigido por la API de EasyPost para calcular tarifas.</description>
    <inlineHelpText>Introduce el peso exacto del producto en kilogramos utilizando hasta dos decimales.</inlineHelpText>
    <label>Weight (kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>